--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
                 <div class="col-md-8 px-0">
                     <h1 class="display-4 font-italic">{{ featured_post.title }}</h1>
                     <p class="lead my-3">{{ featured_post.short_description|truncatewords:30 }}</p>
-                    <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+                    <p class="lead mb-0"><a href="{% url 'blog' featured_post.slug %}" class="text-white font-weight-bold">Continue reading...</a></p>
                 </div>
             </div>
         {% endif %}
@@ -23,7 +23,7 @@
                 <div class="col-md-6">
                     <div class="card border-0">
                         <div class="card-body">
-                            <h3>{{ featured_post.title }}</h3>
+                            <h3><a href="{% url 'blog' featured_post.slug %}" class="text-dark">{{ featured_post.title }}</a></h3>
                             <small class="mb-1 text-muted">{{ featured_post.created_at| timesince }} ago | {{ featured_post.author }}</small>
                             <p class="card-text">{{ featured_post.short_description|truncatewords:30 }}</p>
                         </div>
@@ -40,7 +40,7 @@
                 <div class="col-md-8 blog-main">
                     <div class="card border-0">
                         <div class="card-body">
-                            <h3>{{ post.title }}</h3>
+                            <h3><a href="{% url 'blog' post.slug %}" class="text-dark">{{ post.title }}</a></h3>
                             <small class="mb-1 text-muted">{{ post.created_at| timesince }} ago | {{ post.author }}</small>
                             <p class="card-text">{{ post.short_description|truncatewords:30 }}</p>
                         </div>
@@ -51,19 +51,25 @@
             <!-- /.blog-main -->
 
             <aside class="col-md-4 blog-sidebar">
-                <div class="p-3 mb-3 bg-light rounded">
-                    <h4 class="font-italic">About</h4>
-                    <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur
-                        purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-                </div>
+                {% if about %}
+                    <div class="p-3 mb-3 bg-light rounded">
+                        <h4 class="font-italic">About</h4>
+                        <p class="mb-0">{{ about.about_description }}</p>
+                    </div>
+                {% endif %}
 
-                <div class="p-3">
-                    <h4 class="font-italic">Follow Us</h4>
-                    <ol class="list-unstyled">
-                        <li><a href="#">GitHub</a></li>
-                        <li><a href="#">LinkedIn</a></li>
-                    </ol>
-                </div>
+                {% if social_links %}
+                    <div class="p-3">
+                        <h4 class="font-italic">Follow Us</h4>
+                        <ol class="list-unstyled">
+                            {% for social_link in social_links %}
+                                <li><a href="{{ social_link.link }}" target="_blank">{{ social_link.platform_name }}</a></li>
+                            {% endfor %}
+
+                        </ol>
+                    </div>
+                {% endif %} 
+
             </aside><!-- /.blog-sidebar -->
 
         </div><!-- /.row -->
