--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -15,7 +15,7 @@
         </div>
         <div class="col-4 d-flex justify-content-end align-items-center">
             {% if request.user.is_authenticated %}
-                <span>You are logged in as {{ request.user }}</span>
+                <span><a href="{% url 'dashboards:dashboard' %}" class="btn btn-sm btn-outline-warning">Dashboard</a></span>
                 &nbsp;
                 <a class="btn btn-sm btn-warning" href="{% url 'logout' %}">Logout</a> &nbsp;
             {% else %}
