--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,13 @@
     <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
         {% include 'inc/header.html' %}
         {% block content %}{% endblock %}
+        {% include 'inc/footer.html' %}
     </div>
-    {% include 'inc/footer.html' %}
 </body>
 </html>
