--- a/dashboards/templates/dashboards/dashboard.html
+++ b/dashboards/templates/dashboards/dashboard.html
@@ -2,28 +2,30 @@
 {% block content %}
 	<div class="row">
         {% include 'dashboards/inc/sidebar.html' %}
-
-        <div class="col-md-9">
-            <span >Logged in as <b>{{ user }}</b></span>
-            <div class="row">
-                <div class="col">
-                    <div class="card border-default mb-3">
-                        <div class="card-header text-center text-uppercase font-weight-bold">All Categories</div>
-                        <div class="card-body text-dark">
-                            <h5 class="card-title text-center">{{ category_count }}</h5>
+        {% if request.user.is_staff %}
+            <div class="col-md-9">
+                <span >Logged in as <b>{{ user }}</b></span>
+                <div class="row">
+                    <div class="col">
+                        <div class="card border-default mb-3">
+                            <div class="card-header text-center text-uppercase font-weight-bold">All Categories</div>
+                            <div class="card-body text-dark">
+                                <h5 class="card-title text-center">{{ category_count }}</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card border-default mb-3">
+                            <div class="card-header text-center text-uppercase font-weight-bold">All Posts</div>
+                            <div class="card-body text-dark">
+                                <h5 class="card-title text-center">{{ blog_count }}</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card border-default mb-3">
-                        <div class="card-header text-center text-uppercase font-weight-bold">All Posts</div>
-                        <div class="card-body text-dark">
-                            <h5 class="card-title text-center">{{ blog_count }}</h5>
-                        </div>
-                    </div>
-                </div>
-
             </div>
-        </div>
+        {% else %}
+            <h5>You do not have permission to view this page</h5>
+        {% endif %}
     </div>
 {% endblock %}
