--- a/dashboards/templates/dashboards/edit_category.html
+++ b/dashboards/templates/dashboards/edit_category.html
@@ -5,12 +5,16 @@
         {% include 'dashboards/inc/sidebar.html' %}
 
         <div class="col-md-9">
-            <h2>Edit Category</h2>
-            <form action="" method="post" style="width: 500px">
-                {% csrf_token %}
-                {{ form | crispy }}
-                <button type="submit" class="btn btn-warning mb-1">Submit</button>
-            </form>
+            {% if perms.blogs.change_category %}
+                <h2>Edit Category</h2>
+                <form action="" method="post" style="width: 500px">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <button type="submit" class="btn btn-warning mb-1">Submit</button>
+                </form>
+            {% else %}
+                <h5>You do not have permission to view this page</h5>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
