--- a/dashboards/templates/dashboards/edit_user.html
+++ b/dashboards/templates/dashboards/edit_user.html
@@ -3,10 +3,9 @@
 {% block content %}
     <div class="row">
         {% include 'dashboards/inc/sidebar.html' %}
-
         <div class="col-md-9">
-            {% if perms.blogs.change_blog %}
-                <h2>Edit Post</h2>
+            {% if perms.auth.change_user %}
+                <h2>Edit User</h2>
                 <form action="" method="post">
                     {% csrf_token %}
                     {{ form | crispy }}
@@ -15,7 +14,6 @@
             {% else %}
                 <h5>You do not have permission to view this page</h5>
             {% endif %}
-
         </div>
     </div>
 {% endblock %}
